# USV_Autonomy

./: CMakeLists.txt  README.md  README_JETSON.md  package.xml
launch/: usv_jetson.launch.py
msg/: Debris.msg  MissionCommand.msg  SystemStatus.msg
scripts/: configure_gps.sh  setup_accel.sh  setup_jetson.sh
src/: navigation_node.py  perception_node.py  supervisor_node.py
